2008-11-08  Antti Koivisto  <antti@apple.com>

        Reviewed by Sam Weinig.
        
        Fix https://bugs.webkit.org/show_bug.cgi?id=22141
        REGRESSION: Safari error page is not fully styled when loaded from cache
        
        Reset text decoder on flush so it does not pass through the BOM when it is reused.

        Test: fast/encoding/css-cached-bom.html

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::flush):

2008-11-08  Kevin Ollivier  <kevino@theolliviers.com>
 
        Reviewed by Mark Rowe.

        Send URL errors to stderr rather than stdout. While debugging wx DumpRenderTree,
        it was causing these errors to end up in the page's text representation.

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::downloadTimerCallback):

2008-11-08  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fixes after addition of JSCore parser and bycompiler dirs. 

        * webcore-base.bkl:
        * webcore-wx.bkl:

2008-11-08  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=21906
        
        Override addFocusRingRects() in RenderTextControl to avoid
        the RenderFlow behavior of recursing on descendent renderers.
        RenderTextControl should only ever need a simple focus rect.
        
        This fixes focus ring issues with transforms on text controls.
        
        Test: fast/transforms/transformed-focused-text-input.html

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::addFocusRingRects):
        * rendering/RenderTextControl.h:

2008-11-08  Dimitri Dupuis-Latour  <dupuislatour@apple.com>

        Make sure the icon thumbnail width/height is at least 1px in
        the Web Inspector's resource panel.

        <rdar://problem/5988888>

        Reviewed by Tim Hatcher.

        * inspector/front-end/inspector.css:
