@@ -38,6 +38,13 @@ using namespace WTF;
 
 namespace WebCore {
 
+const RGBA32 Color::black;
+const RGBA32 Color::white;
+const RGBA32 Color::darkGray;
+const RGBA32 Color::gray;
+const RGBA32 Color::lightGray;
+const RGBA32 Color::transparent;
+
 const RGBA32 lightenedBlack = 0xFF545454;
 const RGBA32 darkenedWhite = 0xFFABABAB;
 
